--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,7 +57,7 @@
             android:text="Contraseña" />
 
         <EditText
-            android:id="@+id/editTextTextPassword"
+            android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
@@ -67,7 +67,7 @@
             android:inputType="textPassword" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/buttonIngresar"
             android:layout_width="match_parent"
             android:layout_height="63dp"
             android:layout_marginBottom="30dp"
@@ -82,7 +82,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/textRegistrarse"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Registrarse"
