--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,8 +11,8 @@
         android:layout_height="730dp"
         android:backgroundTint="@color/azul_oscuro"
         android:orientation="vertical"
-        android:paddingLeft="15dp"
-        android:paddingEnd="15dp">
+        android:padding="10dp"
+        android:paddingRight="10dp">
 
         <TextView
             android:id="@+id/textView"
@@ -94,7 +94,7 @@
                 android:text="¿Olvidó su contraseña?"
                 android:textAlignment="textEnd"
                 android:textColor="@color/azul_oscuro"
-                tools:visibility="gone" />
+                android:visibility="invisible" />
 
         </LinearLayout>
 
@@ -107,9 +107,9 @@
             android:layout_weight="0"
             android:drawableBottom="?android:attr/fingerprintAuthDrawable"
             android:drawableTint="@color/white"
+            android:visibility="gone"
             app:cornerRadius="1000dp"
-            tools:ignore="SpeakableTextPresentCheck"
-            tools:visibility="gone" />
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <ImageButton
             android:id="@+id/imageButton"
@@ -131,6 +131,6 @@
             android:layout_gravity="center"
             android:layout_marginTop="5dp"
             android:text="One-Touch Login"
-            tools:visibility="gone" />
+            android:visibility="gone" />
     </LinearLayout>
 </LinearLayout>
